Bug 213238 - Page break don't move the view
Summary: Page break don't move the view
Status: RESOLVED FIXED
Alias: None
Product: kword
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: Persona: Susan
Assignee: Thomas Zander
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-05 13:26 UTC by Daniel Nicoletti
Modified: 2010-09-27 21:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Nicoletti 2009-11-05 13:26:45 UTC
Version:           2.1 RC 1 (using 4.3.2 (KDE 4.3.2), Debian packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.30-2-amd64

When I insert a page break I expect the view to just go right
there on the new page, but instead it does not, the view stays on the same
page (no matter where I'm at).
Also the redo behavior is verry strange,
I add 1 Page Break, and have to redo it 3 times to get rid of it.
Using KWord 2.1 RC1 (Debian binaries).
Thanks.
Comment 1 Thomas Zander 2009-11-15 00:26:11 UTC
SVN commit 1049277 by zander:

Fixes inserting Page break don't move the view

Add a signal to the documentLayout which is emitted when a frame is added to
the frameset. This is then used to update the view if we are editing this shape.

BUG:213238

 M  +4 -1      kword/part/frames/KWTextDocumentLayout.h  
 M  +7 -1      kword/part/frames/KWTextFrameSet.cpp  
 M  +2 -1      libs/kotext/KoTextDocumentLayout.cpp  
 M  +4 -1      libs/kotext/KoTextDocumentLayout.h  
 M  +16 -2     plugins/textshape/TextTool.cpp  
 M  +3 -1      plugins/textshape/TextTool.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1049277
Comment 2 Daniel Nicoletti 2010-07-14 20:26:26 UTC
I'm still having this issue in KOffice 2.2.1
Thanks.
Comment 3 Thomas Zander 2010-09-27 21:27:03 UTC
SVN commit 1180371 by zander:

A line with no text still has a position.

BUG: 213238

 M  +1 -1      TextTool.cpp  
 M  +1 -2      tests/TestTextTool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180371