Fixes inserting Page break don't move the view

Add a signal to the documentLayout which is emitted when a frame is added to
the frameset. This is then used to update the view if we are editing this shape.

BUG:213238

svn path=/trunk/koffice/; revision=1049277