kword/part/frames/KWTextDocumentLayout.h
@@ -1,5 +1,5 @@
 /* This file is part of the KDE project
- * Copyright (C) 2006-2007 Thomas Zander <zander@kde.org>
+ * Copyright (C) 2006-2007, 2009 Thomas Zander <zander@kde.org>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -44,6 +44,9 @@ public:
 
     /// reimplemented from KoTextDocumentLayout::shapes()
     QList<KoShape*> shapes() const;
+
+protected:
+    friend class KWTextFrameSet;
 
 private:
     /// reimplemented from KoTextDocumentLayout::relayout()
