libs/kotext/KoTextDocumentLayout.cpp
@@ -1,5 +1,5 @@
 /* This file is part of the KDE project
- * Copyright (C) 2006-2007 Thomas Zander <zander@kde.org>
+ * Copyright (C) 2006-2007, 2009 Thomas Zander <zander@kde.org>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -158,6 +158,7 @@ void KoTextDocumentLayout::addShape(KoShape *shape)
         data->foul();
         m_state->reset();
     }
+    emit shapeAdded(shape);
 }
 
 void KoTextDocumentLayout::setInlineTextObjectManager(KoInlineTextObjectManager *iom)
