libs/kotext/KoTextDocumentLayout.h
@@ -1,5 +1,5 @@
 /* This file is part of the KDE project
- * Copyright (C) 2006-2007 Thomas Zander <zander@kde.org>
+ * Copyright (C) 2006-2007, 2009 Thomas Zander <zander@kde.org>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -197,6 +197,9 @@ public:
 
     /// reimplemented from QAbstractTextDocumentLayout
     virtual void documentChanged(int position, int charsRemoved, int charsAdded);
+
+signals:
+    void shapeAdded(KoShape *shape);
 
 public slots:
     /// make sure we start a layout run (returns immediately)
