plugins/textshape/TextTool.h
@@ -234,6 +234,9 @@ private slots:
     void debugTextDocument();
     /// print debug about the details of the styles on the current text document
     void debugTextStyles();
+    /// the document we are editing has received an extra shape
+    void shapeAddedToDoc(KoShape *shape);
+    void ensureCursorVisible();
 
 #ifndef NDEBUG
 protected:
@@ -244,7 +247,6 @@ private:
     void repaintCaret();
     void repaintSelection();
     void repaintSelection(int from, int to);
-    void ensureCursorVisible();
     QRectF textRect(int startPosition, int endPosition) const;
     int pointToPosition(const QPointF & point) const;
     void updateActions();
